add opeations to perform state transitions on package and bag
